Prevent overflow

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+html {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /*box-sizing: border-box;*/
   font-family: "Poppins", sans-serif;
 }
 
@@ -190,4 +193,10 @@ label .menu-btn {
   font-weight: 500;
   color: rgb(216, 217, 218);
   margin-bottom: 40px;
+}
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
